--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversor PNG para WebP</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="container mt-5">
-      <h1 class="text-center">Conversor de Imagens PNG para WebP</h1>
+  <body class="bg-gray-50 min-h-screen flex items-center justify-center">
+    <div class="container mx-auto p-6 bg-white shadow-md rounded-lg">
+      <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">
+        Conversor de Imagens PNG para WebP
+      </h1>
 
       <!-- Formulário para upload de pasta/arquivos -->
       <form
@@ -19,13 +21,16 @@
         action="/upload"
         method="post"
         enctype="multipart/form-data"
+        class="space-y-4"
       >
-        <div class="mb-3">
-          <label for="formFile" class="form-label"
+        <div>
+          <label
+            for="formFile"
+            class="block text-sm font-medium text-gray-700"
             >Selecione a pasta com as imagens</label
           >
           <input
-            class="form-control"
+            class="mt-2 p-2 border border-gray-300 rounded-lg w-full"
             type="file"
             name="images"
             id="formFile"
@@ -33,11 +38,16 @@
             webkitdirectory
           />
         </div>
-        <button type="submit" class="btn btn-primary">Fazer Upload</button>
+        <button
+          type="submit"
+          class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition"
+        >
+          Fazer Upload
+        </button>
       </form>
 
       <!-- Mensagem de sucesso/erro -->
-      <div id="message" class="mt-3"></div>
+      <div id="message" class="mt-4"></div>
     </div>
 
     <script>
@@ -52,8 +62,7 @@
         if (input.files.length === 0) {
           message.textContent =
             "Por favor, selecione ao menos um arquivo ou pasta.";
-          message.classList.remove("alert-success");
-          message.classList.add("alert", "alert-danger");
+          message.className = "mt-4 text-red-600";
           return;
         }
 
@@ -67,8 +76,7 @@
 
           if (response.ok) {
             const convertedFiles = await response.json();
-            message.classList.remove("alert-danger");
-            message.classList.add("alert", "alert-success");
+            message.className = "mt-4 text-green-600";
             message.innerHTML = "Imagens convertidas com sucesso! <br>";
 
             console.log(convertedFiles);
@@ -78,18 +86,16 @@
               const link = document.createElement("a");
               link.href = `/downloads/${file}`; // Link para download
               link.textContent = `Download ${file}`;
-              link.classList.add("btn", "btn-link");
+              link.className = "block text-blue-600 hover:underline mt-2";
               link.target = "_blank"; // Abre o download em nova aba
               message.appendChild(link);
-              message.appendChild(document.createElement("br")); // Quebra de linha
             });
           } else {
             throw new Error("Erro na resposta do servidor");
           }
         } catch (error) {
           message.textContent = "Erro ao fazer upload das imagens.";
-          message.classList.remove("alert-success");
-          message.classList.add("alert", "alert-danger");
+          message.className = "mt-4 text-red-600";
         }
       });
     </script>
